# django-rest-boilerplate

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README-EN.md  README.md  docker-compose.yml  mypy_files.txt  pyproject.toml  pytest.ini
.github/workflows/: run-integration-tests.yml  run-unit-tests.yml
backend/core/: apps.py  views.py
config/make/: base.mk  docker.mk  local.mk  quality.mk  tests.mk
settings/: base.py
tests/integration/: test_index.py
tests/unit/: test_dummy_stuff.py
